[package]
name = "soğuk-cüzdan"
version = "0.1.0"
edition = "2021"

[dependencies]

aes-gcm = "0.10"                

ed25519-dalek = "1.0"           

pbkdf2 = "0.10"                 

sha2 = "0.10"                  

rand = "0.8"                    

zeroize = "1.5"                 

hex = "0.4"                   

zip = "0.6"                     

